# sinspekto

./: .clang-format  .clang-tidy  .dir-locals.el  .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.org  conanfile.py  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: conan-gcc.yml  conan-msvc.yml  gh-pages.yml
_static/: style.puml
api/: classAxisEqualizer.html  classDdsBitPublisher.html  classDdsBitSubscriber.html  classDdsBuffer.html  classDdsCommandPublisher.html  classDdsCommandSubscriber.html  classDdsDataSource.html  classDdsDoubleBuffer.html  classDdsDoublePublisher.html  classDdsDoubleSubscriber.html  classDdsIdVec1dBuffer.html  classDdsIdVec1dPublisher.html  classDdsIdVec1dSubscriber.html  classDdsIdVec2dBuffer.html  classDdsIdVec2dPublisher.html  classDdsIdVec2dSubscriber.html  classDdsIdVec3dBuffer.html  classDdsIdVec3dPublisher.html  classDdsIdVec3dSubscriber.html  classDdsIdVec4dBuffer.html  classDdsIdVec4dPublisher.html  classDdsIdVec4dSubscriber.html  classDdsKinematics2DBuffer.html  classDdsKinematics2DPublisher.html  classDdsKinematics2DSubscriber.html  classDdsKinematics6DBuffer.html  classDdsKinematics6DPublisher.html  classDdsKinematics6DSubscriber.html  classDdsNlpConfigSubscriber.html  classDdsOptiStatsSubscriber.html  classDdsStateAutomaton.html  classDdsTimepointBuffer.html  classDdsWeatherDataSubscriber.html  classRatatoskCurrentAtDepthSubscriber.html  classRatatoskCurrentProfileSubscriber.html  classRatatoskDepthInfoSubscriber.html  classRatatoskDouble2Publisher.html  classRatatoskDouble2Subscriber.html  classRatatoskDouble3Publisher.html  classRatatoskDouble3Subscriber.html  (+108 more)
api_private/: class_view_hierarchy.html  classchart__example.html  classminimal__example.html  classsinspekto_1_1DdsReaderListener.html  dir_src.html  dir_src_qml.html  dir_src_qml_example.html  dir_src_sinspekto.html  file_src_qml_example_chart_example.qml.html  file_src_qml_example_minimal_example.qml.html  file_src_sinspekto_FkinDds.hpp.html  file_src_sinspekto_QtToDdsPriv.hpp.html  file_src_sinspekto_RatatoskDds.hpp.html  file_src_sinspekto_WeatherDds.hpp.html  file_view_hierarchy.html  library-api-private.html  namespace_QtToDds.html  namespace_fkin__Dds.html  namespace_sinspekto.html  program_listing_file_src_qml_example_chart_example.qml.html  program_listing_file_src_qml_example_minimal_example.qml.html  program_listing_file_src_sinspekto_FkinDds.hpp.html  program_listing_file_src_sinspekto_QtToDdsPriv.hpp.html  program_listing_file_src_sinspekto_RatatoskDds.hpp.html  program_listing_file_src_sinspekto_WeatherDds.hpp.html  structQtToDds_1_1Dds.html  structsinspekto_1_1Reader.html  structsinspekto_1_1Writer.html  unabridged_api.html  unabridged_orphan.html
cmake/: FindOpenSplice.cmake  projectConfig.cmake.in
data/: app.rc  qtquickcontrols2.conf  qtresources.qrc  template.desktop  translations.qrc
data/fonts/icofont/: demo.html  icofont.css  icofont.min.css
data/fonts/icofont/fonts/: icofont.eot
data/languages/: fkin_en.ts  fkin_no.ts
docs/: CMakeLists.txt  SfhDocHelpers.cmake  conf.py.in  docset_feed.xml.in  emacs-install-pkgs.el  emacs-load.el  index.org  requirements.txt
docs/_templates/: breadcrumbs.html  footer.html
docs/org/: installation.org  intro.org
docs/tex/: defs.tex
include/sinspekto/: AxisEqualizer.hpp  DdsBit.hpp  DdsBuffer.hpp  DdsCommand.hpp  DdsDataSource.hpp  DdsDouble.hpp  DdsDoubleBuffer.hpp  DdsIdVec1d.hpp  DdsIdVec1dBuffer.hpp  DdsIdVec2d.hpp  DdsIdVec2dBuffer.hpp  DdsIdVec3d.hpp  DdsIdVec3dBuffer.hpp  DdsIdVec4d.hpp  DdsIdVec4dBuffer.hpp  DdsKinematics2D.hpp  DdsKinematics2DBuffer.hpp  DdsKinematics6D.hpp  DdsKinematics6DBuffer.hpp  DdsNlpConfig.hpp  DdsOptiStats.hpp  DdsStateAutomaton.hpp  DdsTimepointBuffer.hpp  DdsWeatherData.hpp  QtToDds.hpp  SinspektoQml.hpp  sinspekto.hpp
include/sinspekto/ratatosk/: RatatoskCurrentAtDepth.hpp  RatatoskCurrentProfile.hpp  RatatoskDepthInfo.hpp  RatatoskDouble2.hpp  RatatoskDouble3.hpp  RatatoskDouble4.hpp  RatatoskDoubleVal.hpp  RatatoskGyroInfo.hpp  RatatoskLogInfo.hpp  RatatoskPosInfo.hpp  RatatoskWindInfo.hpp
rst/: installation.html  intro.html
src/: CMakeApps.cmake  CMakeLists.txt
src/programs/: publisher.cpp  subscriber.cpp
src/programs/example/: chart.cpp  minimal.cpp
src/programs/sinspekto/: sinspekto.cpp
src/qml/: chart.qrc  minimal.qrc  sinspekto.qrc
src/qml/components/: FkinControlComponents.qml  FkinDdsSetup.qml  FkinFooter.qml  FkinInfoDash.qml  FkinStyle.qml  InfoDirectionMagnitude.qml  InfoPlanning.qml  NlpInfo.qml  NorthEast.qml  RemoteProgramCommands.qml  RemoteProgramGroup.qml  Splash.qml  TabIconButton.qml  TimeChart.qml  TransformToNED.qml
src/qml/example/: chart_example.qml  minimal_example.qml
src/qml/js/: fkinHelpers.js
src/qml/sinspekto/: sinspekto.qml
src/sinspekto/: AxisEqualizer.cpp  DdsBit.cpp  DdsBuffer.cpp  DdsCommand.cpp  DdsDataSource.cpp  DdsDouble.cpp  DdsDoubleBuffer.cpp  DdsIdVec1d.cpp  DdsIdVec1dBuffer.cpp  DdsIdVec2d.cpp  DdsIdVec2dBuffer.cpp  DdsIdVec3d.cpp  DdsIdVec3dBuffer.cpp  DdsIdVec4d.cpp  DdsIdVec4dBuffer.cpp  DdsKinematics2D.cpp  DdsKinematics2DBuffer.cpp  DdsKinematics6D.cpp  DdsKinematics6DBuffer.cpp  DdsNlpConfig.cpp  DdsOptiStats.cpp  DdsStateAutomaton.cpp  DdsTimepointBuffer.cpp  DdsWeatherData.cpp  FkinDds.hpp  QtToDds.cpp  QtToDdsPriv.hpp  RatatoskDds.hpp  SinspektoPriv.cpp  SinspektoQml.cpp  WeatherDds.hpp
src/sinspekto/ratatosk/: RatatoskCurrentAtDepth.cpp  RatatoskCurrentProfile.cpp  RatatoskDepthInfo.cpp  RatatoskDouble2.cpp  RatatoskDouble3.cpp  RatatoskDouble4.cpp  RatatoskDoubleVal.cpp  RatatoskGyroInfo.cpp  RatatoskLogInfo.cpp  RatatoskPosInfo.cpp  RatatoskWindInfo.cpp
test_package/: CMakeLists.txt  conanfile.py  sinspektotest.cpp
tools/docker/: gitlab-builder.df  run-sinspekto.df
tools/profiles/: android_api28_armv8  android_api28_x86_64  android_sinspekto  linux_x86_64
tools/scripts/: patcher.py  run-in-docker.sh
